2015-09-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_gantt_chart.js (generate): Use an opacity
	gradient on bars without a well-defined end. Remove "Next scheduled
	run" from tooltip of bars.

2015-09-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/classic/omp.xsl (asset-os-icon): Make tooltip for os icon
	independent of "scanning" aspect.

2015-09-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Add deleting of Hosts.

	* src/html/classic/omp.xsl (asset [os-details]): Correct asset_type and
	title.
	(asset [host-details]): Add delete icon.
	(html-hosts-table): Use actual icon count, because there is one.
	(html-oss-table): Remove Action column and use actual icon count, so
	that Action column is produced automatically.
	(asset/host): Add delete icon.
	(asset/os): Move delete icon into bulk action check, else an extra
	column is produced.

2015-09-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add option to move a Task to a new slave on the details and edit pages.

	* src/gsad_omp.c (edit_task): Add static header.
	(generate_page): Add edit_task.
	(move_task_omp): New function.
	(get_task): Get slaves list.

	* src/gsad_omp.h (move_task_omp): New function prototype.

	* src/gsad.c (init_validator, exec_omp_post): Add move_task command.

	* src/html/classic/gsad.xsl (move_task_response [response-indicator]):
	New template.
	(html-gsa-logo): Add indicator for move_task on get_task and edit_task
	pages.

	* src/html/classic/omp.xsl (move_task_icon): New template.
	(task [details]): Add "Move task" menu icon.
	(move_task_response): New template.
	(html-edit-task-form): Add "Move task" menu icon.

2015-09-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (asset [os-details]): Add delete icon.

2015-09-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Add deleting to OSs page.

	* src/html/classic/omp.xsl (html-oss-table): Add Actions column.